--- a/website/index.html
+++ b/website/index.html
@@ -2,10 +2,18 @@
 <html>
   <head>
     <title>redux-devtools-filterable-log-monitor</title>
-    <meta charset="utf-8">
+    <meta charset='utf-8'>
+    <link
+      type='image/x-icon'
+      rel='shortcut icon'
+    >
   </head>
   <body>
     <div id='root'/>
-    <link href='https://fonts.googleapis.com/css?family=Roboto:400,700' rel='stylesheet' type='text/css'>
+    <link
+      href='https://fonts.googleapis.com/css?family=Roboto:400,700'
+      rel='stylesheet'
+      type='text/css'
+    >
   </body>
 </html>
